--- a/package.json
+++ b/package.json
@@ -5,7 +5,15 @@
   "repository": "https://github.com/rubensojunior/desafio-rocketseat-03.git",
   "author": "rubensojunior <jroliveirati@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon src/server.js",
+    "dev:debug": "nodemon --inspect src/serve.js"
+  },
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2",
+    "sucrase": "^3.12.1"
   }
 }
